Add flex layout to groups

--- a/src/components/Groups/Groups.css
+++ b/src/components/Groups/Groups.css
@@ -1,3 +1,13 @@
+.groups {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.groups .group {
+  width: 250px;
+}
+
 .groups .group .group-name {
   background-color: hotpink;
   font-weight: 600;
