--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,35 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap'); */
 
 :root {
   --main-font: Poppins;
 
-  --color-b1: #fbf5ef;
-  --color-b2: #f2d3ab;
-  --color-b3: #c69fa5;
-  --color-b4: #8b6d9c;
-  --color-b5: #494d7e;
-  --color-b6: #272744;
+  --color-1: #fbf5ef;
+  --color-2: #f2d3ab;
+  --color-3: #c69fa5;
+  --color-4: #8b6d9c;
+  --color-5: #494d7e;
+  --color-6: #272744;
 
-  --page-bg: var(--color-b6);
-  --title-bg: var(--color-b3);
-  --title-text: var(--color-b6);
-  --filters-bg: var(--color-b4);
-  --filters-text: var(--color-b2);
-  --button-bg: var(--color-b5);
-  --button-text: var(--color-b1);
-  --button-border: var(--color-b6);
-  --list-header-bg: var(--color-b5);
-  --list-header-text: var(--color-b2);
-  --list-row-bg: var(--color-b6);
-  --modal-bg: var(--color-b1);
-  --modal-text: var(--color-b6);
-  --modal-border: var(--color-b5);
-  --modal-close-button-bg: var(--color-b4);
-  --modal-close-button-text: var(--color-b1);
-  --text: var(--color-b1);
-  --text-highlight: var(--color-b3);
+  --page-bg: var(--color-6);
+  --title-bg: var(--color-3);
+  --title-text: var(--color-6);
+  --filters-bg: var(--color-4);
+  --filters-text: var(--color-2);
+  --button-bg: var(--color-5);
+  --button-text: var(--color-1);
+  --button-border: var(--color-6);
+  --list-header-bg: var(--color-5);
+  --list-header-text: var(--color-2);
+  --list-row-bg: var(--color-6);
+  --modal-bg: var(--color-1);
+  --modal-text: var(--color-6);
+  --modal-border: var(--color-5);
+  --modal-close-button-bg: var(--color-4);
+  --modal-close-button-text: var(--color-1);
+  --modal-close-button-hover-bg: var(--color-5);
+  --text: var(--color-1);
+  --text-highlight: var(--color-3);
 }
 
 body {
