--- a/src/App.css
+++ b/src/App.css
@@ -4,15 +4,6 @@
 :root {
   --main-font: Poppins;
 
-/* 
-  --color-1: #fbf5ef;
-  --color-2: #f2d3ab;
-  --color-3: #c69fa5;
-  --color-4: #8b6d9c;
-  --color-5: #494d7e;
-  --color-6: #272744;
-*/
-
   --color-0: #fbf5ef;
   --color-1: #fd724e;
   --color-2: #a02f40;
@@ -29,6 +20,7 @@
   --button-bg: var(--color-5);
   --button-text: var(--color-0);
   --button-border: var(--color-4);
+  --button-hover-bg: var(--color-3);
   --list-header-bg: var(--color-4);
   --list-header-text: var(--color-0);
   --list-row-bg: var(--color-6);
@@ -55,49 +47,21 @@ body {
   color: var(--button-text);
   font-family: inherit;
   font-weight: 600;
-  border-radius: 8%;
+  border-radius: 5px;
   border: 2px solid var(--button-border);
+}
+
+.button:hover,
+.button:focus {
+  background-color: var(--button-hover-bg);
 }
 
 .toggle-button {
   margin: 6px;
 }
 
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.app {
+  max-width: 1064px;
+  margin-left: auto;
+  margin-right: auto;
 }
