--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 /* @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap'); */
 
+@import 'filters.css';
+
 :root {
   --main-font: Poppins;
 
@@ -30,8 +32,8 @@
   --modal-close-button-bg: var(--color-4);
   --modal-close-button-text: var(--color-0);
   --modal-close-button-hover-bg: var(--color-3);
-  --group-name-bg: var(--color-3);
-  --group-item-bg: var(--color-4);
+  --group-name-bg: var(--color-4);
+  --group-item-bg: var(--color-6);
   --text: var(--color-0);
   --text-highlight: var(--color-1);
 }
